========
20120110
========

- Improvements to type inference and error messages
- New 'dynClass' pseudo-attribute for most HTML tags
- New 't.*' notation for selecting all columns of a table
- New SQL functions: 'lower' and 'upper'
- 'timeFormat' .urp directive
- Client-side 'debug' and 'naughtyDebug' calls use a browser debug console, if available
- Allow 'source' values to be returned by RPCs
- Change the HTML context classification scheme in 'Basis'
- Rename 'Top.id' to 'ident' to avoid clash with 'Basis.id'
- More client-side function implementations
- Some expanded reference manual sections
- Tweak to linker command line argument order (to prevent issues with new Ubuntu versions)
- Bug fixes

========
20111127
========

- Improvements to type inference and error messages
- New Basis members: ceil, float, null, round, trunc
- New SQL expression forms: 'IF..THEN..ELSE', 'COALESCE', and 'LIKE'
- Support for the full set of HTML character entities
- Client-side versions of some time-related functions
- New URWEB_PG_CON environment variable
- Allow arguments for 'con' signature items, not just declarations
- Bug fixes and performance improvements
- Tweaks for idiosyncrasies of OS X (like deprecated OpenSSL)

========
20110917
========

- Start of official tutorial
- Compiler support for generating nice tutorial HTML from literate source files
- New protocol 'static' for generating static pages
- Replace GCCARGS 'configure' variable with CCARGS
- Better support for compilation with Clang (including on OS X)
- Fancier 'configure' script with versioning
- Applications consult URWEB_STACK_SIZE environment variable to determine thread
  stack size
- HTML tag IDs now drawn from an abstract type
- New Basis functions: diffInSeconds, mkMonad, onClick, onDblclick, onKeydown,
  onKeypress, onKeyup, onMousedown, onMouseup, preventDefault, stopPropagation,
  toSeconds
- Add <image> tag
- Add 'target' attribute for <a>
- New compiler command-line option: -dumpTypes