@@ -1,5 +1,5 @@
-AC_INIT([urweb], [20120110])
-WORKING_VERSION=1
+AC_INIT([urweb], [20120310])
+WORKING_VERSION=0
 AC_USE_SYSTEM_EXTENSIONS
 AM_INIT_AUTOMAKE([-Wall -Werror foreign no-define])
 AC_PROG_CC()
