@@ -238,6 +238,8 @@ sqlite3 path/to/database/file <app.sql
     \end{verbatim}
   \end{itemize}
 
+\item \texttt{-dumpSource}: When compilation fails, output to stderr the complete source code of the last intermediate program before the compilation phase that signaled the error.  (Warning: these outputs can be very long and aren't especially optimized for readability!)
+
 \item \texttt{-limit class num}: Equivalent to the \texttt{limit} directive from \texttt{.urp} files
 
 \item \texttt{-output FILENAME}: Set where the application executable is written.
